--- a/CryptopiaApi/CryptopiaApi.vbproj
+++ b/CryptopiaApi/CryptopiaApi.vbproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Client.vb" />
     <Compile Include="GetBalance.vb" />
+    <Compile Include="GetCurrencies.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
