--- a/CryptopiaApi/CryptopiaApi.vbproj
+++ b/CryptopiaApi/CryptopiaApi.vbproj
@@ -73,6 +73,7 @@
     <Compile Include="Client.vb" />
     <Compile Include="GetBalance.vb" />
     <Compile Include="GetCurrencies.vb" />
+    <Compile Include="GetDepositAddress.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
