--- a/CryptopiaApi/CryptopiaApi.vbproj
+++ b/CryptopiaApi/CryptopiaApi.vbproj
@@ -74,6 +74,7 @@
     <Compile Include="GetBalance.vb" />
     <Compile Include="GetCurrencies.vb" />
     <Compile Include="GetDepositAddress.vb" />
+    <Compile Include="GetOpenOrders.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
