--- a/CryptopiaApi/CryptopiaApi.vbproj
+++ b/CryptopiaApi/CryptopiaApi.vbproj
@@ -75,6 +75,7 @@
     <Compile Include="GetCurrencies.vb" />
     <Compile Include="GetDepositAddress.vb" />
     <Compile Include="GetOpenOrders.vb" />
+    <Compile Include="GetTradeHistory.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
