--- a/CryptopiaApi/CryptopiaApi.vbproj
+++ b/CryptopiaApi/CryptopiaApi.vbproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="ApiKeys.vb" />
     <Compile Include="ApiEndpoint.vb" />
+    <Compile Include="CancelTrade.vb" />
     <Compile Include="Client.vb" />
     <Compile Include="GetBalance.vb" />
     <Compile Include="GetCurrencies.vb" />
@@ -92,7 +93,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SubmitTip.vb" />
     <Compile Include="SubmitTrade.vb" />
+    <Compile Include="SubmitWithdraw.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
